bk_ida/gccida/g1/final_scan_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2315:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2315:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2316:4: error: expected ';' after expression
rtx v38; // [rsp+0h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2316:5: error: use of undeclared identifier 'v38'
rtx v38; // [rsp+0h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2327:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( int)insn[3]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2352:22: error: unexpected type name 'FILE': expected identifier
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2352:27: error: expected ')'
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2352:15: note: to match this '('
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2352:17: error: a parameter list without types is only allowed in a function definition
( ( void (  *)( rtx, FILE *, _QWORD, _QWORD, _QWORD))debug_hooks->label)( 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2363:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2385:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = ( const char *)insn[4]; 
                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2422:23: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( ( unsigned int)( debug_info_level_0 - 2) <= 1 
                      ^~~~~~~~~~~~~~~~~~
                      debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2435:23: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( ( unsigned int)( debug_info_level_0 - 2) <= 1 
                      ^~~~~~~~~~~~~~~~~~
                      debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2496:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2544:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2594:29: error: expected expression
if ( asm_noperands( *( rtx *)&insn[2]) >= 0 ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2596:26: error: expected ')'
i = asm_noperands( ( rtx)v9); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2596:18: note: to match this '('
i = asm_noperands( ( rtx)v9); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2600:34: error: expected ')'
v33 = decode_asm_operands( ( rtx)v9, &v38, 0LL, 0LL, 0LL); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2600:26: note: to match this '('
v33 = decode_asm_operands( ( rtx)v9, &v38, 0LL, 0LL, 0LL); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2610:24: error: use of undeclared identifier 'v38'
output_asm_insn( v33, &v38); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/final.c:2629:24: error: expected ';' after expression
final_sequence = ( rtx)v9; 
                       ^
                       ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final_scan_insn/src/obj/final.o] Error 1
